--- a/RickAndMortySolution/RickAndMorty/RickAndMorty.csproj
+++ b/RickAndMortySolution/RickAndMorty/RickAndMorty.csproj
@@ -62,6 +62,9 @@
 	  <MauiXaml Update="Views\CharacterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\DetailsCharacterPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
