--- a/RickAndMortySolution/RickAndMorty/RickAndMorty.csproj
+++ b/RickAndMortySolution/RickAndMorty/RickAndMorty.csproj
@@ -35,7 +35,7 @@
 		<MauiIcon Include="Resources\AppIcon\rickandmortyappicon.png" ForegroundFile="Resources\AppIcon\rickandmortyappicon.png" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\rickandmortysplash.png"/>
+		<MauiSplashScreen Include="Resources\Splash\rickandmortysplash.png" Color="#f0f0f0"/>
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
